force-app/main/default/objects/BGR_Routing__c/BGR_Routing__c.object-meta.xml
<CustomObject>
    <label>BGR Routing</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>BGR Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BGR Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>