force-app/main/default/objects/BGR_Routing__c/fields/Positive_Material_Identification__c.field-meta.xml
<CustomField>
    <fullName>Positive_Material_Identification__c</fullName>
    <label>Positive Material Identification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>CONFIRM</fullName>
                <label>Confirm Alloy Type</label>
            </value>
            <value>
                <fullName>CHEMICAL</fullName>
                <label>Perform Chemical Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>