force-app/main/default/objects/BGR_Routing__c/fields/Standard_Operation_Id__c.field-meta.xml
<CustomField>
    <fullName>Standard_Operation_Id__c</fullName>
    <label>Standard Operation Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>