force-app/main/default/objects/BGR_Routing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Operation_Number__c</columns>
    <columns>Outside_Operation_Item__c</columns>
    <columns>Positive_Material_Identification__c</columns>
    <columns>Standard_Operation_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Descr__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>